// Vitest Snapshot v1

exports[`renders 1`] = `
<button
  className="sc-bcXHqe eTvdtE"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bcXHqe fmEPPj"
>
  foo
</button>
`;
